# quickservant

./: README.md  flake.nix  quickservant.cabal  scripts.nix
app/: Main.hs
