cabal-version: 2.2
name:          quickservant
version:       0.0.0.0

-- synopsis:       $synopsis
-- description:    $description
-- category:       $category
-- homepage:       $gitrepo#readme
-- bug-reports:    $gitrepo/issues
-- maintainer:     $maintainer
build-type:    Simple

-- source-repository head
--   type: git
--   location: $gitrepo

common common-opts
  default-extensions:
    GADTs
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiWayIf
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TupleSections
    TypeApplications

  ghc-options:        -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    , aeson
    , async
    , attoparsec
    , base
    , base-compat
    , binary
    , blaze-html
    , blaze-markup
    , bytestring
    , containers
    , deriving-aeson
    , directory
    , foldl
    , http-media
    , lucid
    , mtl
    , primitive
    , safe-exceptions
    , servant
    , servant-server
    , string-conversions
    , text
    , time
    , unordered-containers
    , vector
    , wai
    , warp

  -- Codecs
  -- Parallelism
  -- Mutability
  -- Binary
  -- Containers
  -- Utilities
  -- Web
  default-language:   Haskell2010

library
  import:          common-opts
  exposed-modules: Core
  hs-source-dirs:  src

executable quickservant
  import:          common-opts
  main-is:         Main.hs
  exposed-modules: Main
  hs-source-dirs:  app
  build-depends:   quickservant

test-suite test
  import:         common-opts
  type:           exitcode-stdio-1.0
  main-is:        Test.hs
  hs-source-dirs: test
  build-depends:
    , hspec
    , hspec-expectations
    , QuickCheck
    , quickservant
